# ThreadBear

./: .gitignore  .threadbear_history  README.md  ThreadBear.bat  _delete_nul.py  api_clients.py  artifact_manager.py  branch_db.py  branch_manager.py  chat_manager.py  config_manager.py  content_security.py  context_documents.py  cost_tracker.py  document_db.py  error_classifier.py  flask_chat_app.py  folder_manager.py  folders.json  hello.py  hello_annie.py  message_compaction.py  prompt_templates.py  pyproject.toml  requirements.txt  run.py  threadbear.db  weather_natchez.py  weather_natchez.sh
.opencode/plans/: phase1-core-chat.md
agent/: __init__.py  completion_detector.py  execution_engine.py  loop_detector.py  plan_manager.py  system_prompts.py  todo_manager.py
cli/: __init__.py  app.py  themes.py
default_toolbox/: hello_toolbelt.py  weather_demo.py
docs/: cli_flask_audit_plan.md
prompts/: default_prompts.jsonl  prompts.jsonl
readers/: __init__.py  code_reader.py  csv_reader.py  docx_reader.py  encoding.py  epub_reader.py  excel_reader.py  md_reader.py  pdf_reader.py  pptx_reader.py  registry.py  smart_chunker.py  txt_reader.py  url_reader.py
static/: chat.js
static/views/: graph_view.js  timeline_view.js  tree_view.js  view_switcher.js
templates/: chat.html
threadbear.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
threadbear_services/: __init__.py  providers.py  text_utils.py
tools/: __init__.py  agent_tools.py  artifact_tools.py  core_tools.py  registry.py  safety.py  script_sandbox.py  web_search.py
