[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "threadbear"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.7",
    "textual>=0.80.0",
    "requests>=2.31",
    "python-dotenv",
    "PyPDF2>=3.0",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "ddgs>=9.0",
    "beautifulsoup4>=4.12",
]

[project.scripts]
threadbear = "cli:run"

[tool.setuptools.packages.find]
include = ["cli*"]
